Bug fixes and pic&sum added

--- a/CWBDataApp/templates/CWBDataApp/BatchCostTracking.html
+++ b/CWBDataApp/templates/CWBDataApp/BatchCostTracking.html
@@ -450,7 +450,7 @@
           </div>
 
           <div class="inline-flex inputBox">
-            <label for="colourPercent">Colour Percentage: </label>
+            <label for="colourPercent">Colour Percentage %: </label>
             <input id="colourPercent" type="number" name="colourPercent"  value="0" step=any />
             <input id="weightSum" hidden />
             <p id="boldMessage"> If you added shred weight above in the material section, then it is included in the colour calculation </p>
@@ -467,7 +467,7 @@
           <p> -------------------------------------------------------------- </p>
 
           <div class="inline-flex inputBox">
-            <label for="foamPercent">Foam Percentage: </label>
+            <label for="foamPercent">Foam Percentage %: </label>
             <input id="foamPercent" type="number" name="foamPercent"  value="0" step=any />
           </div>
 
