--- a/CWBDataApp/templates/CWBDataApp/ProductInventoryQuery.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventoryQuery.html
@@ -67,7 +67,7 @@
             <th>Colour</th>
             <th>Embossed</th>
             <th>Double Sided</th>
-            <th>Number of Pieces</th>
+            <th>Number of skids</th>
           </tr>
         </thead>
         <tr>
