--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -107,6 +107,7 @@
                   <a class="dropdown-item" href="{% url 'CWBDataApp:UpdateSupplier'%}"> Update Supplier</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:AddProfileAverage'%}"> Add Profile Average</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:UpdateProfileAverage'%}"> Update Profile Average</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:AddSubject'%}"> Add/Remove CIS Email Subject</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:PrintForms'%}">Forms</a>
                   <a class="dropdown-item"  href="{% url 'CWBDataApp:logout' %}">Log Out</a>
                 </div>
