Added update/view picsums, stored media files on amazons3

--- a/CWBDataApp/static/CWBDataApp/body.css
+++ b/CWBDataApp/static/CWBDataApp/body.css
@@ -88,3 +88,12 @@ tr, td, th
   flex-wrap: nowrap;
   margin: 0 5% 5% 5%;
 }
+
+.picsum
+{
+  background-color: White;
+  border-radius: 5px;
+  border-style: solid;
+  padding:5% 10% 5% 10%;
+  margin-bottom: 10%;
+}
