--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -88,6 +88,8 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <a class="dropdown-item" href="{% url 'CWBDataApp:PicSum'%}">Enter a new Pic&Sum</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:PicSumView'%}">View Pic&Sum Data</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:PicSumUpdate'%}">Update Pic&Sum Data</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:PicSumForms'%}">Download Data </a>
                 </div>
               </li>
