--- a/CWBDataApp/templates/CWBDataApp/report.html
+++ b/CWBDataApp/templates/CWBDataApp/report.html
@@ -11,8 +11,8 @@
   <div>
     <h2 id="header"> Continuous Improvement System </h2>
     <p id="descriptionParagraph">
-        Report on how the shop can improved in general or safety wise. Report safety concerns and things that the shop needs or is missing.
-        And report any system bugs or errors here as well.
+        Tell us how the shop can improved. Report safety concerns, items that the shop needs or is missing,
+        and report any system bugs or errors here as well.
     </p>
   </div>
 
