--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -21,12 +21,12 @@
     <main class="flex-fill">
 
       <!-- Menu bar on top of the page-->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
         <a class="navbar-brand" href="{% url 'CWBDataApp:index' %}">
           {% load static %}
           <img  id="cwbimg" src="{% static 'CWBDataApp/images/cwbtech.jpg'%}" alt="cwbtech">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
