Fixed updating pic&sum bug, issue with loading and finding the pic&sum

--- a/CWBDataApp/templates/CWBDataApp/PicSumUpdate.html
+++ b/CWBDataApp/templates/CWBDataApp/PicSumUpdate.html
@@ -76,12 +76,12 @@
 
           <div class="inline-flex form-group">
             <label for="newTitle">Title: </label>
-            <input id="newTitle" type="text" name="newTitle" maxlength="20" value={{pic.title}}>
-            <input id="title" type="text" name="title" maxlength="20" value={{pic.title}} hidden>
+            <input id="newTitle" type="text" name="newTitle" maxlength="40" value="{{pic.title}}">
+            <input id="title" type="text" name="title" maxlength="40" value="{{pic.title}}" hidden>
           </div>
 
           <div class="inline-flex inputBox">
-            <label for=testdate">Date*: </label>
+            <label for="testdate">Date*: </label>
             <input id="testdate" type="date" name="testdate" min="2021-01-01" value={{picDate}}>
           </div>
 
